--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1155,6 +1155,7 @@ set(GUI_SOURCES
   ${GUI_SOURCES}
   src/gui/AutoUpdater.cc
   src/gui/CGALWorker.cc
+  src/gui/CSGWorker.cc
   src/gui/ViewportControl.cc
   src/gui/Console.cc
   src/gui/Dock.cc
