prepare for mxe builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -554,10 +554,11 @@ if(ENABLE_PYTHON)
   )
   target_link_libraries(OpenSCAD PRIVATE OpenSCADPy)
 endif()
-
-find_package(CURL REQUIRED)
-include_directories(${CURL_INCLUDE_DIR})
-target_link_libraries(curl-demo ${CURL_LIBRARIES})
+# find_package(CURL REQUIRED)
+# include_directories(${CURL_INCLUDE_DIR})
+#target_link_libraries(curl-demo ${CURL_LIBRARIES})
+target_link_directories(OpenSCAD PRIVATE "/usr/lib64")
+target_link_libraries(OpenSCAD PRIVATE "libcurl.so")
 
 if(ENABLE_HIDAPI)
   find_package(HidAPI 0.10 QUIET)
