mxe compiles with curl now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -554,11 +554,19 @@ if(ENABLE_PYTHON)
   )
   target_link_libraries(OpenSCAD PRIVATE OpenSCADPy)
 endif()
-# find_package(CURL REQUIRED)
-# include_directories(${CURL_INCLUDE_DIR})
-#target_link_libraries(curl-demo ${CURL_LIBRARIES})
-target_link_directories(OpenSCAD PRIVATE "/usr/lib64")
-target_link_libraries(OpenSCAD PRIVATE "libcurl.so")
+if(MXECROSS)
+  find_package(CURL REQUIRED)
+#  message(STATUS ${CURL_FOUND})
+#  message(STATUS ${CURL_INCLUDE_DIR})
+#  message(STATUS ${CURL_INCLUDE_LIBRARIES})
+#  message(STATUS ${CURL_VERSION_STRING})
+  target_compile_definitions(OpenSCAD PRIVATE CURL_STATICLIB)
+  target_include_directories(OpenSCAD SYSTEM PRIVATE ${CURL_INCLUDE_DIR})
+  target_link_libraries(OpenSCAD PRIVATE "libcurl.a;libidn2.a;libssh2.a;libunistring.a")
+else()	
+  target_link_directories(OpenSCAD PRIVATE "/usr/lib64")
+  target_link_libraries(OpenSCAD PRIVATE "libcurl.so")
+endif()
 
 if(ENABLE_HIDAPI)
   find_package(HidAPI 0.10 QUIET)
