Threads are now working with python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ option(ENABLE_CGAL "Enable CGAL." ON)
 option(ENABLE_MANIFOLD "Enable Manifold." ON)
 option(ALLOW_BUNDLED_HIDAPI "Allow usage of bundled HIDAPI library (Windows only)." OFF)
 option(ENABLE_PYTHON "Enable experimental Python Interpreter" OFF)
+option(PYTHON_VERSION "Specify Exact Python Version" "")
 option(ENABLE_LIBFIVE "Enable libfive Library" OFF)
 option(BUILD_SHARED_LIBS "Build shared library" OFF)
 include(CMakeDependentOption)
@@ -459,9 +460,6 @@ if(ENABLE_PYTHON)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_PYTHON_BINDINGS=OFF)
      endif()
   message(STATUS "Python enabled, using Nettle ")
-  message(STATUS ${Nettle_INCLUDE_DIRS})
-  message(STATUS ${Nettle_LIBRARIES})
-  message(STATUS ${Nettle_FOUND})
   target_compile_definitions(OpenSCAD PRIVATE ENABLE_PYTHON)
   target_compile_definitions(OpenSCADPy PRIVATE ENABLE_PYTHON)
   if(WIN32) 
@@ -499,11 +497,16 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${HARFBUZZ_INCLUDE_DIRS})
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
   else() #MXE
-    SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
-    SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
+    if("$PYTHON_VERSION}" STREQUAL "")
+      SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
+      SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
+    else()
+      string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  PYTHON_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
+      string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  PYTHON_LIBRARIES "${Python_LIBRARIES}" )
+    endif()
     target_link_libraries(OpenSCADPy PRIVATE ${PYTHON_LIBRARIES})
     target_include_directories(OpenSCADPy PRIVATE ${PYTHON_INCLUDE_DIRS})
-    message(STATUS "Python enabled ${PYTHONLIBS_FOUND} ${PYTHON_LIBRARIES}")
+    message(STATUS "Python enabled")
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
     target_link_libraries(OpenSCADPy PRIVATE ${Python_LIBRARIES})
   endif() # endif MXE
