using latest version of libfive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -458,6 +458,7 @@ if(ENABLE_PYTHON)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_STUDIO_APP=OFF)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_GUILE_BINDINGS=OFF)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_PYTHON_BINDINGS=OFF)
+       target_compile_definitions(OpenSCADPy PRIVATE ENABLE_DEBUG=OFF)
      endif()
   message(STATUS "Python enabled, using Nettle ")
   target_compile_definitions(OpenSCAD PRIVATE ENABLE_PYTHON)
