--- a/resources/common.qrc.in
+++ b/resources/common.qrc.in
@@ -16,6 +16,7 @@
     <file>icons/prefs3DView.png</file>
     <file>icons/prefsEditor.png</file>
     <file>icons/prefsUpdate.png</file>
+    <file>icons/prefsPython.png</file>
 
     <file>icons/close.png</file>
     <file>icons/information-icons-error.png</file>
