simple step import working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1000,6 +1000,8 @@ set(CORE_SOURCES
   src/io/import_obj.cc
   src/io/import_off.cc
   src/io/import_stl.cc
+  src/io/import_step.cc
+  src/io/StepKernel.cc
   src/io/import_svg.cc
   src/libsvg/circle.cc
   src/libsvg/data.cc
