--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -991,6 +991,7 @@ set(CORE_SOURCES
   src/io/export_pdf.cc
   src/io/export_stl.cc
   src/io/export_svg.cc
+  src/io/export_step.cc
   src/io/export_pov.cc
   src/io/export_param.cc
   src/io/export_wrl.cc
