coded CMakeList.txt more clearly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -490,14 +490,14 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
   else() #MXE
     if("$PYTHON_VERSION}" STREQUAL "")
-      SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
-      SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
+	    SET(Python_Eff_LIBRARIES ${Python_LIBRARIES} )
+	    SET(Python_Eff_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
     else()
-      string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  PYTHON_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
-      string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  PYTHON_LIBRARIES "${Python_LIBRARIES}" )
+	    string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  Python_Eff_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
+	    string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  Python_Eff_LIBRARIES "${Python_LIBRARIES}" )
     endif()
-    target_link_libraries(OpenSCADPy PRIVATE ${PYTHON_LIBRARIES})
-    target_include_directories(OpenSCADPy PRIVATE ${PYTHON_INCLUDE_DIRS})
+    target_link_libraries(OpenSCADPy PRIVATE ${Python_Eff_LIBRARIES})
+    target_include_directories(OpenSCADPy PRIVATE ${Python_Eff_INCLUDE_DIRS})
     message(STATUS "Python enabled")
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
     target_link_libraries(OpenSCADPy PRIVATE ${Python_LIBRARIES})
