extra handling for PYTHON_VERSION=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -493,8 +493,13 @@ if(ENABLE_PYTHON)
 	    SET(Python_Eff_LIBRARIES ${Python_LIBRARIES} )
 	    SET(Python_Eff_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
     else()
-	    string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  Python_Eff_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
-	    string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  Python_Eff_LIBRARIES "${Python_LIBRARIES}" )
+	    if("${PYTHON_VERSION}" STREQUAL "OFF")
+                    SET(Python_Eff_LIBRARIES ${Python_LIBRARIES} )
+		    SET(Python_Eff_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
+            else()		    
+	   	     string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  Python_Eff_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
+	             string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  Python_Eff_LIBRARIES "${Python_LIBRARIES}" )
+            endif()		     
     endif()
     target_link_libraries(OpenSCADPy PRIVATE ${Python_Eff_LIBRARIES})
     target_include_directories(OpenSCADPy PRIVATE ${Python_Eff_INCLUDE_DIRS})
