--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -973,6 +973,7 @@ set(CORE_SOURCES
   src/geometry/GeometryUtils.cc
   src/geometry/PolySet.cc
   src/geometry/PolySetBuilder.cc
+  src/geometry/Curve.cc
   src/geometry/PolySetUtils.cc
   src/geometry/rotextrude.cc
   src/geometry/Polygon2d.cc
