--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -983,6 +983,7 @@ set(CORE_SOURCES
   src/geometry/PolySet.cc
   src/geometry/PolySetBuilder.cc
   src/geometry/Curve.cc
+  src/geometry/Surface.cc
   src/geometry/PolySetUtils.cc
   src/geometry/rotextrude.cc
   src/geometry/Polygon2d.cc
