--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/microsoft/mimalloc.git
 [submodule "submodules/manifold"]
 	path = submodules/manifold
-	url = https://github.com/elalish/manifold
+	url = https://github.com/elalish/manifold.git
 	ignore = dirty
 [submodule "submodules/libfive"]
 	path = submodules/libfive
@@ -18,3 +18,6 @@
 [submodule "OpenCSG"]
 	path = submodules/OpenCSG
 	url = https://github.com/openscad/OpenCSG.git
+[submodule "Clipper2"]
+	path = submodules/Clipper2
+	url = https://github.com/AngusJohnson/Clipper2.git
