--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,10 +420,10 @@ target_link_libraries(OpenSCAD PRIVATE ${LIBXML2_LIBRARIES})
 find_package(Python COMPONENTS Interpreter Development)
 find_package(Nettle)
 if(NOT Nettle_FOUND)
-  if(ENABLE_PYTHON)
-    message(WARNING "Nettle not found, disabling python support.")
-    set(ENABLE_PYTHON OFF CACHE BOOL "" FORCE)
-  endif()
+#  if(ENABLE_PYTHON)
+#    message(WARNING "Nettle not found, disabling python support.")
+#    set(ENABLE_PYTHON OFF CACHE BOOL "" FORCE)
+#  endif()
 endif()
 if(NOT Python_FOUND  AND NOT WIN32)
   if(ENABLE_PYTHON)
@@ -453,6 +453,8 @@ if(ENABLE_PYTHON)
        target_compile_definitions(OpenSCADPy PRIVATE ENABLE_DEBUG=OFF)
      endif()
   message(STATUS "Python enabled, using Nettle ")
+  message(STATUS "Libs  ${Python_LIBRARIES} " )
+  message(STATUS "include  ${Python_INCLUDE_DIRS} " )
   target_compile_definitions(OpenSCAD PRIVATE ENABLE_PYTHON)
   target_compile_definitions(OpenSCADPy PRIVATE ENABLE_PYTHON)
   if(WIN32) 
@@ -490,12 +492,22 @@ if(ENABLE_PYTHON)
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${HARFBUZZ_INCLUDE_DIRS})
     target_include_directories(OpenSCADPy SYSTEM PRIVATE ${FREETYPE_INCLUDE_DIRS})
   else() #MXE
-    if("$PYTHON_VERSION}" STREQUAL "")
+    if("${PYTHON_VERSION}" STREQUAL "")
+      message(STATUS "AAA")
       SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
       SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
     else()
-      string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  PYTHON_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
-      string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  PYTHON_LIBRARIES "${Python_LIBRARIES}" )
+      message(STATUS "BBB")
+      message(STATUS "${PYTHON_VERSION}")
+      if("${PYTHON_VERSION}" STREQUAL "OFF")
+        message(STATUS "CCC")
+        SET(PYTHON_LIBRARIES ${Python_LIBRARIES} )
+        SET(PYTHON_INCLUDE_DIRS ${Python_INCLUDE_DIRS} )
+      else()
+        message(STATUS "DDD")
+        string(REGEX REPLACE "python[0-9.]+" "python${PYTHON_VERSION}"  PYTHON_INCLUDE_DIRS "${Python_INCLUDE_DIRS}" )
+        string(REGEX REPLACE "python[0-9.]+.so" "python${PYTHON_VERSION}.so"  PYTHON_LIBRARIES "${Python_LIBRARIES}" )
+      endif()
     endif()
     target_link_libraries(OpenSCADPy PRIVATE ${PYTHON_LIBRARIES})
     target_include_directories(OpenSCADPy PRIVATE ${PYTHON_INCLUDE_DIRS})
