simple interaction between pythonscad and jupyter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ option(ALLOW_BUNDLED_HIDAPI "Allow usage of bundled HIDAPI library (Windows only
 option(ENABLE_PYTHON "Enable experimental Python Interpreter" OFF)
 option(PYTHON_VERSION "Specify Exact Python Version" "")
 option(ENABLE_LIBFIVE "Enable libfive Library" OFF)
+option(ENABLE_JUPYTER "Enable jupyter binding" OFF)
 option(BUILD_SHARED_LIBS "Build shared library" OFF)
 include(CMakeDependentOption)
 cmake_dependent_option(APPLE_UNIX "Build OpenSCAD in Unix mode in MacOS X instead of an Apple Bundle" OFF "APPLE" OFF)
@@ -493,8 +494,11 @@ if(ENABLE_PYTHON)
     list(APPEND PYTHON_SOURCES
       src/python/FrepNode.cc)
   endif()
-  add_library(OpenSCADPy
-    ${PYTHON_SOURCES} )
+  if(ENABLE_JUPYTER)
+    list(APPEND PYTHON_SOURCES
+      src/python/openscad_jupyter.cc)
+  endif()
+  add_library(OpenSCADPy ${PYTHON_SOURCES} )
     if(ENABLE_LIBFIVE)
        target_compile_definitions(OpenSCAD PRIVATE ENABLE_LIBFIVE)
        target_compile_definitions(OpenSCADPy PRIVATE ENABLE_LIBFIVE)
@@ -504,6 +508,13 @@ if(ENABLE_PYTHON)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_GUILE_BINDINGS=OFF)
        target_compile_definitions(OpenSCADPy PRIVATE BUILD_PYTHON_BINDINGS=OFF)
        target_compile_definitions(OpenSCADPy PRIVATE ENABLE_DEBUG=OFF)
+     endif()
+     if(ENABLE_JUPYTER)
+       target_compile_definitions(OpenSCAD PRIVATE ENABLE_JUPYTER)
+       target_compile_definitions(OpenSCADPy PRIVATE ENABLE_JUPYTER)
+       set(xeus-zmq_REQUIRED_VERSION 3.0.0)
+       find_package(xeus-zmq ${xeus-zmq_REQUIRED_VERSION} REQUIRED)
+       target_link_libraries(OpenSCAD PRIVATE xeus-zmq)
      endif()
   message(STATUS "Python enabled, using Nettle ${Python_Eff_LIBRARIES}")
   target_compile_definitions(OpenSCAD PRIVATE ENABLE_PYTHON)
@@ -608,9 +619,6 @@ if(ENABLE_PYTHON)
   target_link_libraries(OpenSCAD PRIVATE OpenSCADPy)
 endif()
 
-set(xeus-zmq_REQUIRED_VERSION 3.0.0)
-find_package(xeus-zmq ${xeus-zmq_REQUIRED_VERSION} REQUIRED)
-target_link_libraries(OpenSCAD PRIVATE xeus-zmq)
 
 if(MXECROSS)
   find_package(CURL REQUIRED)
@@ -1423,7 +1431,7 @@ endif()
 if (ENABLE_MANIFOLD AND ENABLE_CGAL)
   list(APPEND Sources ${MANIFOLD_CGAL_SOURCES})
 endif()
-list(APPEND Sources src/openscad.cc src/python/openscad_jupyter.cc ${CORE_SOURCES} ${OFFSCREEN_SOURCES})
+list(APPEND Sources src/openscad.cc ${CORE_SOURCES} ${OFFSCREEN_SOURCES})
 
 set_source_files_properties(
   # flex and bison tends to generate many macros, which does not work well with
